[package]
name = "merkle_sigs"
version = "1.0.0"
authors = ["Frederic Jacobs <github@fredericjacobs.com>"]

[dependencies]
ring = "0.6.0-alpha"
lamport_sigs = { git = "https://github.com/SpinResearch/lamport.rs" }

[dependencies.merkle]
git = "https://github.com/SpinResearch/merkle.rs"
features = ["serialization-protobuf"]
