[package]
name = "merkle_sigs"
version = "1.1.0"
authors = ["Frederic Jacobs <github@fredericjacobs.com>"]

[dependencies]
ring = "^0.11.0"
lamport_sigs = { git = "https://github.com/SpinResearch/lamport.rs.git" }

[dependencies.merkle]
git = "https://github.com/SpinResearch/merkle.rs.git"
features = ["serialization-protobuf"]
