[package]
name = "merkle_sigs"
version = "1.3.1-pre"
authors = ["Frederic Jacobs <github@fredericjacobs.com>"]

description = "A Rust implementation of Merkle signing"

license       = "BSD-3-Clause"
readme        = "README.md"
documentation = "https://spinresearch.github.io/merkle_sigs.rs/merkle_sigs/index.html"
homepage      = "https://github.com/SpinResearch/merkle_sigs.rs"
repository    = "https://github.com/SpinResearch/merkle_sigs.rs"

[dependencies]
ring = "^0.11.0"
lamport_sigs = "^0.4.0"

[dependencies.merkle]
version = "^1.4.0"
features = ["serialization-protobuf"]

[package.metadata.release]
sign-commit = true
upload-doc = true
doc-branch = "gh-pages"
pre-release-commit-message = "Release version {{version}}."
pro-release-commit-message = "Start next development iteration {{version}}."
tag-message = "Release version {{version}}."
doc-commit-message = "Update documentation."
dev-version-ext = "pre"

